[tool.poetry]
name = "teleboost"
version = "0.1.0"
description = ""
authors = ["т"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
random_user_agent = "^1.0.1"
cleo = "^0.8.1"
yaspin = "^0.17.0"
aiosocksy = "^0.1.2"
requests = {extras = ["socks"], version = "^2.23.0"}
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
